[tool.poetry]
name = "freemocapfoundation-dot-org"
version = "0.1.0"
description = ""
authors = ["jonmatthis <jonmatthis@gmail.com>"]
readme = "README.md"
packages = [{include = "freemocapfoundation_dot_org"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^8.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
